# py-tidymodels2

./: .buildinfo  .gitignore  API_DOCUMENTATION_SETUP_COMPLETE.html  API_DOCUMENTATION_STATUS_2025_11_15.html  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_NOTEBOOK_TESTING_REPORT.md  DOCUMENTATION_QUICK_START.md  EXAMPLES_27_37_RETEST_RESULTS.md  EXAMPLES_27_37_TESTING_GUIDE.md  EXAMPLES_27_37_TEST_RESULTS.md  FINAL_NOTEBOOK_INVESTIGATION_SUMMARY.md  FINAL_NOTEBOOK_STATUS.md  INSTALLATION.md  LICENSE  LONG_FORMAT_CONVERSION_SUMMARY.md  MANIFEST.in  METRICS_FORMAT_FIX_SUMMARY.md  NOTEBOOK_FIX_PROGRESS.md  NOTEBOOK_FIX_STATUS.md  NOTEBOOK_FIX_SUMMARY.md  NOTEBOOK_SESSION_COMPLETE.md  README.html  README.md  REBASE_COMPATIBILITY_REPORT.md  RUNNING_DL_TESTS.md  SESSION_2_PROGRESS_REPORT.md  complete_api_reference.html  conformal_notebooks_test_report.json  demo_boost_tree.py  fix_test_stats_format.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  rebase_and_validate.sh  requirements.txt  search.html  (+7 more)
.claude/: CLAUDE.md
.claude_debugging/: API_DOCUMENTATION_COMPLETE.md  API_DOCUMENTATION_STATUS_2025-11-07.md  BAG_TREE_IMPLEMENTATION_SUMMARY.md  CELL_57_DIAGNOSTIC_INSTRUCTIONS.md  CHAINED_SUPERVISED_STEPS_COMPLETE.md  CLAUDE_MD_IMPROVEMENTS.md  CLAUDE_MD_UPDATES_2025_11_09.md  COLUMN_ORDERING_FIX.md  COLUMN_ORDERING_FIX_2025_11_10.md  COLUMN_ORDERING_QUICK_REFERENCE.md  COLUMN_ORDERING_SUMMARY.md  COLUMN_SPACE_VALIDATION_FIX.md  COMPLETE_RECIPE_STEP_AUDIT_2025_11_11.md  COMPLETE_RESTART_PROCEDURE.md  COMPLETE_SESSION_SUMMARY_2025_11_10.md  COMPLETE_SESSION_SUMMARY_2025_11_10_FINAL.md  CONCAT_DEDUPLICATION_FIX.md  CONVERSATION_SUMMARY_2025-11-07_DETAILED.md  DATETIME_FORMULA_EXCLUSION_FIX.md  DATE_COLUMN_FIXES.md  DATE_COLUMN_INFERENCE_IMPLEMENTATION_SUMMARY.md  DATE_INDEXING_FIX.md  DATE_INFERENCE_UTILITIES_UPDATE_SUMMARY.md  DISCRETIZATION_DATETIME_EXCLUSION.md  DOT_NOTATION_COMPLETE_SUMMARY.md  DOT_NOTATION_FIX.md  DOT_NOTATION_SUPPORT_ENGINES.md  DOT_NOTATION_VERIFICATION.md  DUPLICATE_COLUMN_FIX.md  EVALUATE_FIX_2025_11_10.md  EXTRACT_PREPROCESSED_DATA_METHOD_2025_11_10.md  FEATURE_IMPORTANCE_SELECTION_COMPLETE.md  FEATURE_SELECTION_GROUPED_EXAMPLE_2025_11_10.md  FEATURE_TYPE_PARAMETER_ADDED.md  FEATURE_TYPE_SUMMARY.md  FINAL_SESSION_SUMMARY_2025-11-07.md  FINAL_STATUS_SAFE_EIX_COMPLETE.md  FINAL_VERIFICATION_2025_11_10.py  FORECASTING_GROUPED_CONVERSION_COMPLETE.md  FORECASTING_GROUPED_NOTEBOOK_FIX.md  (+162 more)
.claude_plans/: AI_AGENT_RESEARCH_REPORT.md  CATEGORICAL_EXTENDED_SELECTOR_INTEGRATION.md  INTERACTIVE_VIEWER_IMPLEMENTATION_PLAN.md  MLFLOW_INTEGRATION_QUICK_START.md  MLFLOW_INTEGRATION_RESEARCH.json  MLFLOW_INTEGRATION_RESEARCH.md  MODEL_EXPANSION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_COMPLETE_SUMMARY.md  PHASE_3_PROGRESS_SUMMARY.md  PROMPT_ANALYSIS_AND_RECOMMENDATIONS.md  TRELLISCOPE_INTEGRATION_RESEARCH_REPORT.md  TRELLISCOPE_RESEARCH_SUMMARY.md  ideas.md  model_outputs.md  projectplan.md  pytimetk_projectplan.md
.claude_research/: HYBRID_MODELS_SUMMARY.md  MODEL_GAP_ANALYSIS.md  PHASE_4A_IMPLEMENTATION_SUMMARY.md  TIDYMODELS_ECOSYSTEM_RESEARCH.json  TIDYMODELS_RESEARCH_SUMMARY.md  TIME_SERIES_REGRESSION_PRIORITIES.md
.doctrees/: API_DOCUMENTATION_SETUP_COMPLETE.doctree  API_DOCUMENTATION_STATUS_2025_11_15.doctree  README.doctree  complete_api_reference.doctree  index.doctree
_guides/: COMPLETE_MODEL_REFERENCE.md  COMPLETE_PANEL_GROUPED_GUIDE.md  COMPLETE_RECIPE_REFERENCE.md  COMPLETE_TUNING_REFERENCE.md  COMPLETE_WORKFLOWSET_REFERENCE.md  COMPLETE_WORKFLOW_REFERENCE.md  FORECASTING_GROUPED_ANALYSIS.md  REFERENCE_DOCUMENTATION_SUMMARY.md
_md/: 00-forecasting-template.ipynb  01-forecasting-models.ipynb  02-forecasting-recipes.ipynb  02_forecasting-recipes-grouped-feature-selection.ipynb  03-forecasting-workflows-tune.ipynb  04-forecasting-workflowsets-tune-cv-grouped.ipynb  04-forecasting-workflowsets.ipynb  04_forecasting-workflowsets-grouped.ipynb  22_panel_regression_basics.ipynb  23_panel_regression_random_slopes.ipynb  24_panel_regression_workflowset.ipynb  25_panel_regression_cv_tuning.ipynb  PHASE3_RECIPE_DEMOS_ADDED.md  add_phase3_recipe_demos.py  add_recipe_summary_cell.py  comparison.csv  fix_normalize_phase3.py  fix_phase3_demos.py  forecasting.ipynb  forecasting_advanced_workflow_grouped.ipynb  forecasting_cv_grouped.ipynb  issues.md  (+31 more)
(+820 files in other folders)
